# BookOfRecipes

./: .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  template.env
app/: alembic.ini  main.py
app/auth/: api.py  api_routers.py  helpers.py  routers.py
app/core/: config.py  database.py
app/core/models/: base.py  recipe.py  recipes.py  user.py
app/migrations/: env.py
app/migrations/versions/: 2024-04-30-22:20-def51074c45e_add_user_and_user_session.py  2024-05-01-15:12-4a1db16d688a_recipes.py  2024-05-11-23:02-80936c93f9c0_add_images.py  2024_05_01_15:12_4a1db16d688a_recipes.py  2024_05_11_23_02_80936c93f9c0_add_images.py  2024_05_21_22_42_4abbaeeb124e_create_admin_user.py  4a1db16d688a_recipes.py  def51074c45e_add_user_and_user_session.py
app/recipes/: api.py  api_routers.py  routers.py  view_routers.py
app/static/scripts/: auth.js  favorite.js  search.js
app/static/styles/: base.css  recipe-cards.css  search.css
app/templates/: base.html  favorites.html  index.html  recipe.html
app/templates/auth/: login.html  register.html
