[tool.poetry]
name = "book-of-recipes"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.111.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
asyncpg = "^0.29.0"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
